@@ -3,8 +3,9 @@
 
 package logisim.analyze.model;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -14,17 +15,17 @@ import java.util.Map;
 
 public class Implicant implements Comparable<Implicant> {
 	static Implicant MINIMAL_IMPLICANT = new Implicant(0, -1);
-	static List<Implicant> MINIMAL_LIST = Arrays.asList(new Implicant[] { MINIMAL_IMPLICANT });
+	static List<Implicant> MINIMAL_LIST = List.of(MINIMAL_IMPLICANT);
 
 	private static class TermIterator implements Iterable<Implicant>, Iterator<Implicant> {
 		Implicant source;
-		int currentMask = 0;
+		int currentMask;
 
 		TermIterator(Implicant source) {
 			this.source = source;
 		}
 
-		public Iterator<Implicant> iterator() {
+		public @NotNull Iterator<Implicant> iterator() {
 			return this;
 		}
 
@@ -36,11 +37,8 @@ public class Implicant implements Comparable<Implicant> {
 			int ret = currentMask | source.values;
 			int diffs = currentMask ^ source.unknowns;
 			int diff = diffs ^ ((diffs - 1) & diffs);
-			if (diff == 0) {
-				currentMask = -1;
-			} else {
-				currentMask = (currentMask & ~(diff - 1)) | diff;
-			}
+			if (diff == 0) currentMask = -1;
+			else currentMask = (currentMask & -diff) | diff;
 			return new Implicant(0, ret);
 		}
 
@@ -58,22 +56,15 @@ public class Implicant implements Comparable<Implicant> {
 
 	@Override
 	public boolean equals(Object other) {
-		if (!(other instanceof Implicant))
-			return false;
-		Implicant o = (Implicant) other;
-		return this.unknowns == o.unknowns && this.values == o.values;
+		return other instanceof Implicant o && unknowns == o.unknowns && values == o.values;
 	}
 
 	public int compareTo(Implicant o) {
-		if (this.values < o.values)
+		if (values < o.values)
 			return -1;
-		if (this.values > o.values)
+		if (values > o.values)
 			return 1;
-		if (this.unknowns < o.unknowns)
-			return -1;
-		if (this.unknowns > o.unknowns)
-			return 1;
-		return 0;
+		return Integer.compare(unknowns, o.unknowns);
 	}
 
 	@Override
@@ -104,28 +95,26 @@ public class Implicant implements Comparable<Implicant> {
 	private Expression toProduct(TruthTable source) {
 		Expression term = null;
 		int cols = source.getInputColumnCount();
-		for (int i = cols - 1; i >= 0; i--) {
+		for (int i = cols - 1; i >= 0; i--)
 			if ((unknowns & (1 << i)) == 0) {
 				Expression literal = Expressions.variable(source.getInputHeader(cols - 1 - i));
 				if ((values & (1 << i)) == 0)
 					literal = Expressions.not(literal);
 				term = Expressions.and(term, literal);
 			}
-		}
 		return term == null ? Expressions.constant(1) : term;
 	}
 
 	private Expression toSum(TruthTable source) {
 		Expression term = null;
 		int cols = source.getInputColumnCount();
-		for (int i = cols - 1; i >= 0; i--) {
+		for (int i = cols - 1; i >= 0; i--)
 			if ((unknowns & (1 << i)) == 0) {
 				Expression literal = Expressions.variable(source.getInputHeader(cols - 1 - i));
 				if ((values & (1 << i)) != 0)
 					literal = Expressions.not(literal);
 				term = Expressions.or(term, literal);
 			}
-		}
 		return term == null ? Expressions.constant(1) : term;
 	}
 
@@ -135,15 +124,11 @@ public class Implicant implements Comparable<Implicant> {
 		TruthTable table = model.getTruthTable();
 		if (format == AnalyzerModel.FORMAT_PRODUCT_OF_SUMS) {
 			Expression product = null;
-			for (Implicant imp : implicants) {
-				product = Expressions.and(product, imp.toSum(table));
-			}
+			for (Implicant imp : implicants) product = Expressions.and(product, imp.toSum(table));
 			return product == null ? Expressions.constant(1) : product;
 		} else {
 			Expression sum = null;
-			for (Implicant imp : implicants) {
-				sum = Expressions.or(sum, imp.toProduct(table));
-			}
+			for (Implicant imp : implicants) sum = Expressions.or(sum, imp.toProduct(table));
 			return sum == null ? Expressions.constant(0) : sum;
 		}
 	}
@@ -159,14 +144,13 @@ public class Implicant implements Comparable<Implicant> {
 
 		// determine the first-cut implicants, as well as the rows
 		// that we need to cover.
-		HashMap<Implicant, Entry> base = new HashMap<Implicant, Entry>();
-		HashSet<Implicant> toCover = new HashSet<Implicant>();
+		HashMap<Implicant, Entry> base = new HashMap<>();
+		HashSet<Implicant> toCover = new HashSet<>();
 		boolean knownFound = false;
 		for (int i = 0; i < table.getRowCount(); i++) {
 			Entry entry = table.getOutputEntry(i, column);
-			if (entry == undesired) {
-				knownFound = true;
-			} else if (entry == desired) {
+			if (entry == undesired) knownFound = true;
+			else if (entry == desired) {
 				knownFound = true;
 				Implicant imp = new Implicant(0, i);
 				base.put(imp, entry);
@@ -181,15 +165,15 @@ public class Implicant implements Comparable<Implicant> {
 
 		// work up to more general implicants, discovering
 		// any prime implicants.
-		HashSet<Implicant> primes = new HashSet<Implicant>();
+		HashSet<Implicant> primes = new HashSet<>();
 		HashMap<Implicant, Entry> current = base;
 		while (current.size() > 1) {
-			HashSet<Implicant> toRemove = new HashSet<Implicant>();
-			HashMap<Implicant, Entry> next = new HashMap<Implicant, Entry>();
+			HashSet<Implicant> toRemove = new HashSet<>();
+			HashMap<Implicant, Entry> next = new HashMap<>();
 			for (Map.Entry<Implicant, Entry> curEntry : current.entrySet()) {
 				Implicant imp = curEntry.getKey();
 				Entry detEntry = curEntry.getValue();
-				for (int j = 1; j <= imp.values; j *= 2) {
+				for (int j = 1; j <= imp.values; j *= 2)
 					if ((imp.values & j) != 0) {
 						Implicant opp = new Implicant(imp.unknowns, imp.values ^ j);
 						Entry oppEntry = current.get(opp);
@@ -198,22 +182,16 @@ public class Implicant implements Comparable<Implicant> {
 							toRemove.add(opp);
 							Implicant i = new Implicant(opp.unknowns | j, opp.values);
 							Entry e;
-							if (oppEntry == Entry.DONT_CARE && detEntry == Entry.DONT_CARE) {
-								e = Entry.DONT_CARE;
-							} else {
-								e = desired;
-							}
+							if (oppEntry == Entry.DONT_CARE && detEntry == Entry.DONT_CARE) e = Entry.DONT_CARE;
+							else e = desired;
 							next.put(i, e);
 						}
 					}
-				}
 			}
 
 			for (Map.Entry<Implicant, Entry> curEntry : current.entrySet()) {
 				Implicant det = curEntry.getKey();
-				if (!toRemove.contains(det) && curEntry.getValue() == desired) {
-					primes.add(det);
-				}
+				if (!toRemove.contains(det) && curEntry.getValue() == desired) primes.add(det);
 			}
 
 			current = next;
@@ -223,35 +201,28 @@ public class Implicant implements Comparable<Implicant> {
 		// is probably prime.
 		for (Map.Entry<Implicant, Entry> curEntry : current.entrySet()) {
 			Implicant imp = curEntry.getKey();
-			if (current.get(imp) == desired) {
-				primes.add(imp);
-			}
+			if (current.get(imp) == desired) primes.add(imp);
 		}
 
 		// determine the essential prime implicants
-		HashSet<Implicant> retSet = new HashSet<Implicant>();
-		HashSet<Implicant> covered = new HashSet<Implicant>();
+		HashSet<Implicant> retSet = new HashSet<>();
+		HashSet<Implicant> covered = new HashSet<>();
 		for (Implicant required : toCover) {
 			if (covered.contains(required))
 				continue;
 			int row = required.getRow();
 			Implicant essential = null;
-			for (Implicant imp : primes) {
-				if ((row & ~imp.unknowns) == imp.values) {
-					if (essential == null)
-						essential = imp;
-					else {
-						essential = null;
-						break;
-					}
+			for (Implicant imp : primes)
+				if ((row & ~imp.unknowns) == imp.values) if (essential == null)
+					essential = imp;
+				else {
+					essential = null;
+					break;
 				}
-			}
 			if (essential != null) {
 				retSet.add(essential);
 				primes.remove(essential);
-				for (Implicant imp : essential.getTerms()) {
-					covered.add(imp);
-				}
+				for (Implicant imp : essential.getTerms()) covered.add(imp);
 			}
 		}
 		toCover.removeAll(covered);
@@ -268,13 +239,11 @@ public class Implicant implements Comparable<Implicant> {
 			for (Iterator<Implicant> it = primes.iterator(); it.hasNext();) {
 				Implicant imp = it.next();
 				int count = 0;
-				for (Implicant term : imp.getTerms()) {
+				for (Implicant term : imp.getTerms())
 					if (toCover.contains(term))
 						++count;
-				}
-				if (count == 0) {
-					it.remove();
-				} else if (count > maxCount) {
+				if (count == 0) it.remove();
+				else if (count > maxCount) {
 					max = imp;
 					maxCount = count;
 					maxUnknowns = imp.getUnknownCount();
@@ -291,15 +260,13 @@ public class Implicant implements Comparable<Implicant> {
 			if (max != null) {
 				retSet.add(max);
 				primes.remove(max);
-				for (Implicant term : max.getTerms()) {
-					toCover.remove(term);
-				}
+				for (Implicant term : max.getTerms()) toCover.remove(term);
 			}
 		}
 
 		// Now build up our sum-of-products expression
 		// from the remaining terms
-		ArrayList<Implicant> ret = new ArrayList<Implicant>(retSet);
+		ArrayList<Implicant> ret = new ArrayList<>(retSet);
 		Collections.sort(ret);
 		return ret;
 	}
