@@ -3,23 +3,23 @@
 
 package logisim.gui.appear;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import draw.model.CanvasObject;
 import logisim.data.Direction;
 import logisim.data.Location;
 
 class ClipboardContents {
-	static final ClipboardContents EMPTY = new ClipboardContents(Collections.<CanvasObject>emptySet(), null, null);
+	static final ClipboardContents EMPTY = new ClipboardContents(Collections.emptySet(), null, null);
 
 	private Collection<CanvasObject> onClipboard;
 	private Location anchorLocation;
 	private Direction anchorFacing;
 
 	public ClipboardContents(Collection<CanvasObject> onClipboard, Location anchorLocation, Direction anchorFacing) {
-		this.onClipboard = Collections.unmodifiableList(new ArrayList<CanvasObject>(onClipboard));
+		this.onClipboard = List.copyOf(onClipboard);
 		this.anchorLocation = anchorLocation;
 		this.anchorFacing = anchorFacing;
 	}
